# parsek

./: AUTHORS  README  TODO
doc/: index.docbook
src/: CMakeLists.txt  connecttoserverdialog.cpp  connecttoserverdialog.h  connecttoserverdialog.ui  converters.cpp  converters.h  importobject.cpp  importobject.h  loggerwidget.cpp  loggerwidget.h  loggerwidget.ui  mainwindow.cpp  mainwindow.h  messagesmodel.cpp  messagesmodel.h  objectsitem.cpp  objectsitem.h  objectsmodel.cpp  objectsmodel.h  parsek.cpp  parsek.desktop  version.h
src/cmake/: FindTPProto.cmake
